--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,5 +63,9 @@
     ],
     "[prisma]": {
       "editor.defaultFormatter": "Prisma.prisma"
-    }
+    },
+    "cSpell.words": [
+      "Skalierbarkeitsprobleme",
+      "Überspringung"
+    ]
   }
